tests/NormalTests/paczka1/fuzzy1/64488137.err
Error in line 1: WLioJ1om A847 31,5
Error in line 9: WLioJ1om S463 14,14
Error in line 10: S673 A543 90,3
Error in line 21: yuaBopGu S673 44,9
Error in line 17: S673 S463 42,7
Error in line 28: SgYZrD7i0U S463 53,6
Error in line 29: wfB9kV A543 13,8
Error in line 25: yuaBopGu A847 16,5
Error in line 35: wfB9kV S673 4,1
